--- a/frontend/src/Components/LayoutArea/Main/Main.css
+++ b/frontend/src/Components/LayoutArea/Main/Main.css
@@ -1,12 +1,52 @@
 .Main {
     height: 100%;
     padding: 3em;
+    position: relative;
+
+    
 }
 
 .Main .menu {
     position: relative;
 }
 
+label {
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+.Main .add-vacation-form {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 450px;
+    background-color: rgb(153, 142, 142);
+    opacity: 0.8;
+    border-radius:5px ;
+    padding: 1em;
+    justify-content: space-between;
+    display: none;
+}
+
+.Main .form-active {
+    display: flex;
+  }
+
+.Main .submit-btn {
+    align-self: center;
+    padding: 0.5em 1em;
+    border:none;
+    border-radius: 5px;
+    background-color: rgb(44, 44, 145);
+    color: white;
+    font-weight: bold;
+}
 .Main .vacations-area {
     display: flex;
     flex-direction: column;
